TEST_PROGRAMS/INVALID/david_zhou/invalid2.min
# invalid character in string

print "var x: int";
